--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.example.q.project1"
+        applicationId "com.example.q.CS496_proj2"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
